--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -1,46 +1,106 @@
 .home-container {
-    padding: 10px;
-    font-size: 20px;
-    text-align: center;
-    border: 1px solid red;
+  padding: 10px;
+  font-size: 20px;
+  text-align: center;
+  border: 1px solid red;
 }
 
 .home-card {
-    display: flex;
-    flex-direction: column-reverse;
-    border: 1px solid orange;
-    background-color: #fff;
-    border-radius: 20px;
-    box-shadow: 0px 4px 20px rgba(0,0,0,0.25);
+  display: flex;
+  flex-direction: column-reverse;
+  border: 1px solid orange;
+  background-color: #fff;
+  border-radius: 20px;
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
 }
 
 .home-content-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px 10px 60px;
-    border: 1px solid blue;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 10px 60px;
+  border: 1px solid blue;
 }
 
 .home-content-container h1 {
-    font-size: 1em;
-    width: 260px;
-    margin-bottom: 15px;
-} 
+  font-size: 1em;
+  width: 260px;
+  margin-bottom: 15px;
+}
 
 .home-content-container p:nth-child(2) {
-    margin-bottom: 30px;
-    font-size: 0.6em;
-    width: 260px;
-    color: #9E9E9E;
-} 
+  margin-bottom: 30px;
+  font-size: 0.6em;
+  width: 260px;
+  color: #9e9e9e;
+}
 
 .home-image-container {
-    padding: 50px 15px;
-    border: 1px solid purple;
+  padding: 50px 15px;
+  border: 1px solid purple;
 }
 
 .home-image-container svg {
-    width: 100%;
-    height: auto;
+  width: 100%;
+  height: auto;
+}
+
+@media (min-width: 576px) {
+  .home-container {
+    padding: 15px;
+    font-size: 40px;
+  }
+
+  .home-content-container h1 {
+    width: 506px;
+    margin-bottom: 20px;
+  }
+
+  .home-content-container p:nth-child(2) {
+    width: 506px;
+    margin-bottom: 20px;
+  }
+
+  .home-content-container button {
+    width: 506px;
+  }
+
+  .home-image-container svg {
+    width: 506px;
+  }
+}
+
+@media (min-width: 768px) {
+  .home-image-container {
+    padding: 100px 20px;
+  }
+
+  .home-content-container {
+    padding: 20px 20px 100px 20px;
+  }
+}
+
+@media (min-width: 992px) {
+  .home-container {
+    font-size: 55px;
+    padding: 40px;
+  }
+
+  .home-image-container {
+    padding: 125px 20px;
+  }
+
+  .home-content-container {
+    padding: 20px 20px 150px 20px;
+  }
+
+  .home-content-container h1 {
+    width: 700px;
+    margin-bottom: 26px;
+  }
+
+  .home-content-container p:nth-child(2) {
+    width: 700px;
+    margin-bottom: 47px;
+  }
 }
