--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -2,13 +2,11 @@
   padding: 10px;
   font-size: 20px;
   text-align: center;
-  border: 1px solid red;
 }
 
 .home-card {
   display: flex;
   flex-direction: column-reverse;
-  border: 1px solid orange;
   background-color: #fff;
   border-radius: 20px;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
@@ -19,7 +17,6 @@
   flex-direction: column;
   align-items: center;
   padding: 10px 10px 60px;
-  border: 1px solid blue;
 }
 
 .home-content-container h1 {
@@ -37,7 +34,6 @@
 
 .home-image-container {
   padding: 50px 15px;
-  border: 1px solid purple;
 }
 
 .home-image-container svg {
@@ -104,3 +100,40 @@
     margin-bottom: 47px;
   }
 }
+
+@media (min-width: 1200px) {
+  .home-container {
+    text-align: left;
+  }
+
+  .home-card {
+    flex-direction: row;
+    justify-content: space-around;
+    padding: calc(((85vh - 480px) / 2) - 20px) 0;
+  }
+
+  .home-content-container {
+      height: 480px;
+      width: 700px;
+    padding: 20px;
+    align-items: flex-start;
+    flex-flow: wrap;
+    align-content: space-between;
+  }
+
+  .home-image-container {
+    display: flex;
+    align-items: center;
+    padding: 20px;
+  }
+
+  .home-image-container svg {
+    width: 330px;
+  }
+}
+
+@media (min-width: 1400px) {
+    .home-image-container svg {
+      width: 480px;
+    }
+  }
