--- a/frontend/src/components/ButtonIcon/styles.css
+++ b/frontend/src/components/ButtonIcon/styles.css
@@ -1,7 +1,46 @@
-.btn-icon {
+.btn-container {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    border: 0;
+    border-radius: 10px;
+}
+
+.btn-text p {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: #fff;
+    font-size: 14px;
+    margin: 0;
+    padding: 0 10px;
+}
+
+.btn-text p, .btn-icon{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 50px;
 }
 
-.btn-icon p {
-    text-transform: uppercase;
+.btn-icon {
+    width: 50px;
+    background-color:rgba(38,50,56,0.5);
+    border-radius: 0 10px 10px 0;
+    margin: 0;
+    padding: 0;
+}
+
+@media (min-width: 576px){
+
+    .btn-text p {
+        font-size: 18px;
+    }
+
+    .btn-text p, .btn-icon{
+        height: 70px;
+    }
+
+    .btn-icon {
+        width: 70px;
+    }
 }
