--- a/frontend/src/pages/ProductDetails/styles.css
+++ b/frontend/src/pages/ProductDetails/styles.css
@@ -1,72 +1,140 @@
 .product-details-container {
-    padding: 10px;
-    border: 1px solid red;
-    font-size: 22px;
+  padding: 10px;
+  font-size: 22px;
 }
 
-.product-details-card{
-    padding: 10px;
-    border: 1px solid red;
+.product-details-card {
+  padding: 10px;
 }
 
-.goback-container{
-    border: 1px solid red;
-    display: flex;
-    align-items: center;
-    margin-bottom: 20px;
+.goback-container {
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .goback-container svg {
-    color: #407BFF;
-    transform: rotate(-180deg);
-    margin-left: 5px;
+  color: #407bff;
+  transform: rotate(-180deg);
+  margin-left: 5px;
 }
 
 .goback-container p {
-    text-transform: uppercase;
-    font-size: 1em;
-    font-weight: bold;
-    color: #263238;
-    margin: 0 0 0 15px;
-    letter-spacing: -0.015em;
+  text-transform: uppercase;
+  font-size: 1em;
+  font-weight: bold;
+  color: #263238;
+  margin: 0 0 0 15px;
+  letter-spacing: -0.015em;
 }
 
 .img-container {
-    text-align: center;
-    margin-bottom: 20px;
-    border: 1px solid red;
+  text-align: center;
+  margin-bottom: 20px;
+  border: 1px solid #e1e1e1;
+  box-sizing: border-box;
+  border-radius: 20px;
 }
 
 .img-container img {
-    width: 80%;
+  width: 80%;
 }
 
 .name-price-container {
-    margin-bottom: 20px;
-    border: 1px solid red;
+  margin-bottom: 20px;
 }
 
 .name-price-container h1 {
-    font-size: 1.1em;
-    color: #263238;
-    letter-spacing: -0.015em;
+  font-size: 1.1em;
+  color: #263238;
+  letter-spacing: -0.015em;
 }
 
 .description-container {
-    border: 1px solid red;
-
+  padding: 10px;
+  border: 1px solid #e1e1e1;
+  box-sizing: border-box;
+  border-radius: 20px;
 }
 
 .description-container h2 {
-    color: #9e9e9e;
-    letter-spacing: -0.015em;
-    font-size: 0.8em;
-    margin-bottom: 20px;
+  color: #9e9e9e;
+  letter-spacing: -0.015em;
+  font-size: 0.8em;
+  margin-bottom: 20px;
 }
 
 .description-container p {
-    color: #9e9e9e;
-    letter-spacing: -0.015em;
-    font-size: 0.6em;
-    margin-bottom: 20px;
+  color: #9e9e9e;
+  letter-spacing: -0.015em;
+  font-size: 0.6em;
+  margin-bottom: 20px;
+}
+
+@media (min-width: 576px) {
+  .product-details-container {
+    padding: 20px;
+    font-size: 32px;
+  }
+
+  .product-details-card {
+    padding: 20px;
+  }
+
+  .description-container {
+    padding: 20px;
+  }
+}
+
+@media (min-width: 992px) {
+  .product-details-container {
+    padding: 40px;
+  }
+
+  .product-details-card {
+    padding: 40px;
+  }
+
+  .img-container img {
+    width: 50%;
+  }
+
+  .name-price-container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .description-container {
+    padding: 40px;
+  }
+}
+
+@media (min-width: 1200px) {
+    .name-price-container {
+        display: block;
+      }
+
+      .img-container img {
+        height: 280px;
+        width: auto;
+      }
+
+      .description-container {
+          min-height: 282px;
+      }
+}
+
+@media (min-width: 1400px) {
+    .name-price-container {
+        display: block;
+      }
+
+      .img-container img {
+        height: 480px;
+        width: auto;
+      }
+
+      .description-container {
+          min-height: 482px;
+      }
 }
