--- a/frontend/src/pages/Admin/Navbar/styles.css
+++ b/frontend/src/pages/Admin/Navbar/styles.css
@@ -20,6 +20,7 @@ ul {
     border-radius: 100px;
     padding: 0 10px;
     font-weight: bold;
+    font-size: 16px;
     letter-spacing: -0.015em;
     color: #9e9e9e;
 }
@@ -31,4 +32,40 @@ ul {
 
 .admin-nav-item p {
     margin-bottom: 0;
+}
+
+@media(min-width: 576px) {
+    .admin-nav-item {
+        min-width: 160px;
+    }
+}
+
+@media(min-width: 768px) {
+    .admin-nav-item {
+        min-width: 220px;
+    }
+}
+
+@media(min-width: 1200px) {
+    ul {
+        justify-content: unset;
+        flex-direction: column;
+    }
+
+    .admin-nav-container {
+        padding: 0;
+        width: 300px;
+        height: calc(100vh - 70px);
+    }
+
+    .admin-nav-item {
+        border-radius: 0;
+        font-size: 18px;
+        height: 80px;
+        background-color: #fff;
+        border-bottom: 1px solid #e1e1e1;
+        justify-content: flex-start;
+        padding: 0;
+        padding-left: 40px;
+    }
 }
