--- a/frontend/src/components/ButtonIcon/styles.css
+++ b/frontend/src/components/ButtonIcon/styles.css
@@ -1,9 +1,15 @@
 .btn-container {
     display: flex;
+    justify-content: space-between;
     margin: 0;
     padding: 0;
     border: 0;
     border-radius: 10px;
+    width: 100%;
+}
+
+.btn-text {
+    width: calc(100% - 50px);
 }
 
 .btn-text p {
@@ -35,6 +41,10 @@
 }
 
 @media (min-width: 576px){
+
+    .btn-text {
+        width: calc(100% - 70px);
+    }
 
     .btn-text p {
         font-size: 18px;
