Finishing ProductCrudCard mobile layout

--- a/frontend/src/assets/styles/custom.scss
+++ b/frontend/src/assets/styles/custom.scss
@@ -1,6 +1,7 @@
 $theme-colors: (
     'primary': #407bff,
-    'danger': #ff5555
+    'danger': #df5753,
+    'secondary': #9e9e9e
 );
 
 $body-bg: #f2f2f2;
