--- a/frontend/src/pages/Admin/Products/ProductCrudCard/styles.css
+++ b/frontend/src/pages/Admin/Products/ProductCrudCard/styles.css
@@ -1,5 +1,6 @@
 .product-crud-card {
   margin-bottom: 20px;
+  padding-bottom: 20px;
 }
 
 .product-crud-card-top-container {
@@ -25,4 +26,25 @@
 .product-crud-categories-container {
   padding: 0 20px;
   display: flex;
+  flex-wrap: wrap;
+}
+
+.product-crud-card-buttons-container{
+  padding: 0 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.product-crud-card-button{
+  font-weight: bold;
+  font-size: 14px;
+  letter-spacing: -0.015em;
+  text-transform: uppercase;
+  border-radius: 10px;
+  width: 110px;
+  height: 40px;
+}
+
+.product-crud-card-button-first {
+  margin-right: 10px;
 }
