Product crud form - margin and containers

--- a/frontend/src/pages/Admin/Products/Form/styles.css
+++ b/frontend/src/pages/Admin/Products/Form/styles.css
@@ -9,4 +9,28 @@
     letter-spacing: -0.015em;
     text-transform: uppercase;
     color: #263238;
+    margin-bottom: 30px;
+}
+
+.margin-bottom-30{
+    margin-bottom: 30px;
+}
+
+.product-crud-inputs-container{
+    margin-bottom: 30px;
+}
+
+.product-crud-inputs-left-container{
+    margin-bottom: 30px;
+}
+
+.product-crud-buttons-container{
+    display: flex;
+    justify-content: space-between;
+}
+
+@media(min-width: 992px){
+    .product-crud-inputs-left-container{
+        margin-bottom: 0;
+    }
 }
