--- a/frontend/src/assets/styles/custom.scss
+++ b/frontend/src/assets/styles/custom.scss
@@ -1,7 +1,7 @@
 $theme-colors: (
     'primary': #407bff,
     'danger': #df5753,
-    'secondary': #9e9e9e
+    'secondary': #9e9e9e,
 );
 
 $body-bg: #f2f2f2;
