--- a/frontend/src/components/ProductFilter/styles.css
+++ b/frontend/src/components/ProductFilter/styles.css
@@ -1,30 +1,73 @@
-.product-filter-container{
-    margin-bottom: 20px;
-    padding: 15px;
+.product-filter-container {
+  margin-bottom: 20px;
+  padding: 15px;
 }
 
-.product-filter-name-container{
-    display: flex;
-    align-items: center;
-    border-bottom: 1px solid #e1e1e1;
+.product-filter-name-container {
+  display: flex;
+  align-items: center;
+  border-bottom: 1px solid #e1e1e1;
+  margin-bottom: 10px;
 }
 
-.product-filter-name-container input{
-    border: none;
+.product-filter-name-container input {
+  border: none;
 }
 
-.product-filter-name-container input:focus{
-    box-shadow: none;
+.product-filter-name-container input:focus {
+  box-shadow: none;
 }
 
-.product-filter-name-container input::placeholder{
-    color: #9e9e9e;
+.product-filter-name-container input::placeholder {
+  color: #9e9e9e;
 }
 
-@media (min-width: 768px){
-    .product-filter-container{
-        margin-left: 20px;
-        margin-bottom: 0;
-        flex: 1;
+.product-filter-button-searth-icon {
+  border: none;
+  background-color: unset;
+}
+
+.product-filter-bottom-container {
+  display: flex;
+}
+
+.product-filter-category-container {
+  flex: 1;
+  margin-right: 10px;
+}
+
+.product-filter-select__control{
+    font-size: 1em;
+    letter-spacing: -0.015em;
+    color: #263238;
+    border: none !important;
+    border-bottom: 1px solid #e1e1e1 !important;
+}
+
+.product-filter-select__placeholder{
+    color: #9e9e9e !important;
+}
+
+.product-filter-button-clean{
+    text-transform: uppercase;
+    font-weight: bold;
+    border-radius: 10px;
+}
+
+.product-filter-button-clean-word{
+    display: none;
+}
+
+@media (min-width: 576px) {
+    .product-filter-button-clean-word{
+        display: unset;
     }
+  }
+
+@media (min-width: 768px) {
+  .product-filter-container {
+    margin-left: 20px;
+    margin-bottom: 0;
+    flex: 1;
+  }
 }
