--- a/frontend/src/pages/ProductDetails/styles.css
+++ b/frontend/src/pages/ProductDetails/styles.css
@@ -1,6 +1,8 @@
 .product-details-container {
   padding: 10px;
   font-size: 22px;
+  display: flex;
+  justify-content: center;
 }
 
 .product-details-card {
@@ -17,6 +19,7 @@
   color: #407bff;
   transform: rotate(-180deg);
   margin-left: 5px;
+  font-size: 1em;
 }
 
 .goback-container p {
@@ -74,7 +77,6 @@
 @media (min-width: 576px) {
   .product-details-container {
     padding: 20px;
-    font-size: 32px;
   }
 
   .product-details-card {
@@ -88,11 +90,11 @@
 
 @media (min-width: 992px) {
   .product-details-container {
-    padding: 40px;
+    padding: 30px;
   }
 
   .product-details-card {
-    padding: 40px;
+    padding: 30px;
   }
 
   .img-container img {
@@ -105,36 +107,41 @@
   }
 
   .description-container {
-    padding: 40px;
+    padding: 30px;
   }
 }
 
 @media (min-width: 1200px) {
-    .name-price-container {
-        display: block;
-      }
+  .product-details-card{
+    max-width: 1280px;
+  }
 
-      .img-container img {
-        height: 280px;
-        width: auto;
-      }
+  .name-price-container {
+    display: block;
+  }
 
-      .description-container {
-          min-height: 282px;
-      }
+  .img-container img {
+    height: 280px;
+    width: auto;
+  }
+
+  .description-container {
+    min-height: 282px;
+    font-size: 1.5em;
+  }
 }
 
-@media (min-width: 1400px) {
-    .name-price-container {
-        display: block;
-      }
+/* @media (min-width: 1400px) {
+  .name-price-container {
+    display: block;
+  }
 
-      .img-container img {
-        height: 480px;
-        width: auto;
-      }
+  .img-container img {
+    height: 480px;
+    width: auto;
+  }
 
-      .description-container {
-          min-height: 482px;
-      }
-}
+  .description-container {
+    min-height: 482px;
+  }
+} */
