--- a/frontend/src/pages/Admin/Categories/CategoryFilter/styles.css
+++ b/frontend/src/pages/Admin/Categories/CategoryFilter/styles.css
@@ -38,9 +38,14 @@
 
 @media (min-width: 768px) {
   .category-filter-container {
-    margin-bottom: 0;
+    height: 60px;
+    margin-bottom: 40px;
     flex: 1;
     padding: 10px 15px;
+  }
+
+  .category-filter-form {
+    display: flex;
   }
 
   .category-filter-input-container {
