--- a/frontend/src/components/Badge/styles.css
+++ b/frontend/src/components/Badge/styles.css
@@ -1,4 +1,4 @@
-.category-badge-container {
+.badge-container {
   background-color: #c4c4c4;
   padding: 7px;
   border-radius: 10px;
@@ -8,5 +8,5 @@
   letter-spacing: -0.015em;
   height: 33px;
   margin-right: 10px;
-  margin-bottom: 13px;
+  margin-bottom: 15px;
 }
