--- a/frontend/src/pages/Admin/Users/UserCrudCard/styles.css
+++ b/frontend/src/pages/Admin/Users/UserCrudCard/styles.css
@@ -19,6 +19,11 @@
   margin-bottom: 15px;
 }
 
+.user-crud-card-roles-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 .user-crud-card-button {
   width: 100%;
   height: 40px;
@@ -40,9 +45,20 @@
   .user-crud-card-text-content {
     margin-bottom: 0;
     border-bottom: none;
+    border-right: 1px solid #e1e1e1;
+    padding-right: 15px;
+    margin-right: 15px;
   }
 
   .user-crud-card-text {
+    margin-bottom: 0;
+  }
+
+  .user-crud-card-roles-container {
+    flex: 1;
+  }
+
+  .user-crud-card-roles-container .badge-container {
     margin-bottom: 0;
   }
 
