Refactor buttons layout

--- a/frontend/src/pages/Admin/Categories/CategoryCrudCard/styles.css
+++ b/frontend/src/pages/Admin/Categories/CategoryCrudCard/styles.css
@@ -3,12 +3,6 @@
   margin-bottom: 20px;
 }
 
-.category-crud-card-buttons-container {
-  padding: 0 20px;
-  display: flex;
-  justify-content: space-between;
-}
-
 .category-crud-card-text-content {
   margin-bottom: 15px;
   border-bottom: 1px solid #e1e1e1;
@@ -19,15 +13,25 @@
   margin-bottom: 15px;
 }
 
+.category-crud-card-buttons-container {
+  display: flex;
+  justify-content: space-between;
+}
+
 .category-crud-card-button {
-  width: 100%;
-  height: 40px;
-  margin-bottom: 10px;
   font-weight: bold;
   font-size: 14px;
   letter-spacing: -0.015em;
   text-transform: uppercase;
   border-radius: 10px;
+  width: 110px;
+  height: 40px;
+}
+
+@media (min-width: 576px) {
+  .category-crud-card-button {
+    width: 150px;
+  }
 }
 
 @media (min-width: 768px) {
@@ -46,13 +50,8 @@
     margin-bottom: 0;
   }
 
-  .category-crud-card-buttons-content {
+  .category-crud-card-buttons-container {
     display: flex;
-  }
-
-  .category-crud-card-button {
-    margin-bottom: 0;
-    width: 140px;
   }
 
   .category-crud-card-button:nth-child(1) {
