--- a/frontend/src/pages/Admin/Products/ProductCrudCard/styles.css
+++ b/frontend/src/pages/Admin/Products/ProductCrudCard/styles.css
@@ -45,10 +45,6 @@
   height: 40px;
 }
 
-.product-crud-card-button-first {
-  margin-right: 10px;
-}
-
 @media (min-width: 768px) {
   .product-crud-card-top-container {
     border-right: 1px solid #e1e1e1;
@@ -70,12 +66,16 @@
   }
 
   .product-crud-card-buttons-container {
-    flex-direction: column-reverse;
+    flex-direction: column;
     justify-content: center;
   }
 
   .product-crud-card-button {
     width: 150px;
+  }
+
+  .product-crud-card-button:first-child {
+    margin-bottom: 20px;
   }
 
   .product-crud-card-button-first {
