--- a/frontend/src/pages/Admin/Users/UserForm/styles.css
+++ b/frontend/src/pages/Admin/Users/UserForm/styles.css
@@ -1,13 +1,13 @@
-.user-crud-form-container {
+.user-form-card-container {
   max-width: 470px;
   margin: auto;
 }
 
-.user-crud-form-content {
+.user-form-card-content {
   padding: 20px;
 }
 
-.user-crud-form-title {
+.user-form-card-title {
   font-size: 22px;
   font-weight: bold;
   letter-spacing: -0.015em;
@@ -16,7 +16,7 @@
   margin-bottom: 30px;
 }
 
-.user-crud-form-inputs-container {
+.user-form-card-inputs-container {
   margin-bottom: 30px;
 }
 
@@ -24,7 +24,7 @@
   margin-bottom: 30px;
 }
 
-.user-crud-select__control {
+.user-form-card-select__control {
   border-radius: 10px !important;
   font-size: 1em;
   letter-spacing: -0.015em;
@@ -32,20 +32,20 @@
   height: 50px;
 }
 
-.user-crud-select__placeholder {
+.user-form-card-select__placeholder {
   color: #9e9e9e !important;
 }
 
-.user-crud-select__indicator-separator {
+.user-form-card-select__indicator-separator {
   display: none;
 }
 
-.user-crud-form-buttons-container {
+.user-form-card-buttons-container {
   display: flex;
   justify-content: space-between;
 }
 
-.user-crud-button {
+.user-form-card-button {
   height: 50px;
   width: 110px;
   border-radius: 10px;
@@ -53,14 +53,18 @@
   font-weight: bold;
 }
 
+.user-form-card-button:first-child {
+  color: #fff;
+}
+
 @media (min-width: 576px) {
-  .user-crud-button {
+  .user-form-card-button {
     width: 200px;
   }
 }
 
 @media (min-width: 1200px) {
-  .user-crud-form-container {
+  .user-form-card-container {
     margin: 0;
   }
 }
