--- a/frontend/src/components/Navbar/styles.css
+++ b/frontend/src/components/Navbar/styles.css
@@ -1,55 +1,59 @@
 .main-nav {
-    min-height: 70px;
-    padding-left: 40px;
+  min-height: 70px;
+  padding-left: 40px;
 }
 
-.nav-logo-text, .nav-logo-text:hover{
-    color: #fff;
+.nav-logo-text,
+.nav-logo-text:hover {
+  color: #fff;
 }
 
 .main-menu {
-    display: flex;
-    font-size: 18px;
-    width: 380px;
-    justify-content: space-between;
+  display: flex;
+  font-size: 18px;
+  width: 380px;
+  justify-content: space-between;
 }
 
 .main-menu a {
-    color: rgba(255, 255, 255, 0.5);
+  color: rgba(255, 255, 255, 0.5);
 }
 
 .main-menu a:hover {
-    color: #fff;
+  color: #fff;
 }
 
 .main-menu a.active {
-    color: #fff;
-    font-weight: bold;
+  color: #fff;
+  font-weight: bold;
 }
 
 .nav-login-logout {
-    display: none;
+  display: none;
 }
 
 .nav-username {
+  display: none;
+}
+
+@media (min-width: 768px) {
+  .li-login-logout {
     display: none;
+  }
+  .nav-login-logout {
+    display: unset;
+    color: #fff;
+    margin-right: 10px;
+  }
 }
 
-@media(min-width: 768px) {
-    .nav-login-logout {
-        display: unset;
-        color: #fff;
-        margin-right: 10px;
-    }
-}
+@media (min-width: 992px) {
+  .nav-login-logout {
+    margin-right: 40px;
+  }
 
-@media(min-width: 992px) {
-    .nav-login-logout {
-        margin-right: 40px;
-    }
-
-    .nav-username {
-        display: unset;
-        margin-right: 20px;
-    }
+  .nav-username {
+    display: unset;
+    margin-right: 20px;
+  }
 }
