--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -14,7 +14,7 @@ h6 {
   margin-bottom: 0;
 }
 
-ul {  
+ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -41,6 +41,11 @@ a:hover {
 }
 .base-input::placeholder {
   color: #9e9e9e;
+}
+
+.loader-posicion {
+  display: flex;
+  justify-content: center;
 }
 
 #videoCont {
