--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,6 +4,11 @@
   font-family: 'Open Sans', sans-serif;
 }
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 h1,
 h2,
 h3,
@@ -24,6 +29,10 @@ a,
 a:hover {
   text-decoration: none;
   color: unset;
+}
+
+#root{
+  margin-bottom: 80px;
 }
 
 .base-card {
