--- a/frontend/src/components/Footer/styles.css
+++ b/frontend/src/components/Footer/styles.css
@@ -1,4 +1,7 @@
 .footer-container {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
   height: 80px;
   display: flex;
   justify-content: center;
